--- a/MEDVBiServ.APP/appsettings.json
+++ b/MEDVBiServ.APP/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DE_Bible": "Data Source=./Databases/DE-Deutsch/elberfelder_1905.sqlite;Mode=ReadOnly;",
+    "FR_Bible": "Data Source=./Databases/FR-Français/lsg_1910.sqlite;Mode=ReadOnly;",
+    "EN_Bible": "Data Source=./Databases/EN-English/kjv.sqlite;Mode=ReadOnly;"
+  }
 }
