--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: .NET + SonarQube
 
 on:
   push:
@@ -10,9 +10,17 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  
+  build-test-analyze:
 
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, windows, x64]
+
+    env:
+      SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      # Passe den Key an – entweder hier als Secret oder fix als Text:
+      SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+     
 
     steps:
     - uses: actions/checkout@v4
