--- a/MEDVBiServ.API/appsettings.json
+++ b/MEDVBiServ.API/appsettings.json
@@ -5,10 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DE_Bible": "Data Source=./Databases/DE-Deutsch/elberfelder_1905.sqlite;Mode=ReadOnly;",
-    "FR_Bible": "Data Source=./Databases/FR-Français/segond_1910.sqlite;Mode=ReadOnly;",
-    "EN_Bible": "Data Source=./Databases/EN-English/kjv.sqlite;Mode=ReadOnly;"
-  }
+  "AllowedHosts": "*"
 }
