--- a/MEDVBiServ.API/MEDVBiServ.API.csproj
+++ b/MEDVBiServ.API/MEDVBiServ.API.csproj
@@ -1,13 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>b0f31b3a-bf45-4e02-9661-046738c41e82</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MEDVBiServ.Application\MEDVBiServ.Application.csproj" />
   </ItemGroup>
 
 </Project>
