feat(paging): DB-seitiges Paging für Kapitelverse implementiert und PagedResultDto zurückgegeben

--- a/MEDVBiServ.Application/MEDVBiServ.Application.csproj
+++ b/MEDVBiServ.Application/MEDVBiServ.Application.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MEDVBiServ.Contracts\MEDVBiServ.Contracts.csproj" />
     <ProjectReference Include="..\MEDVBiServ.Domain\MEDVBiServ.Domain.csproj" />
 	<ProjectReference Include="..\MEDVBiServ.Infrastructure\MEDVBiServ.Infrastructure.csproj" />
   </ItemGroup>
