refactor(api): alte Paging-Methode entfernt und Request-basiertes Paging vereinheitlicht

--- a/MEDVBiServ.API/appsettings.json
+++ b/MEDVBiServ.API/appsettings.json
@@ -9,7 +9,7 @@
 
   "ConnectionStrings": {
 
-    "BibleDe": "ElberFelder",
-    "BibleFr": "Louise Segond"
+    "BibleDe": "Data Source=C:\\Users\\KUDO27640-Admin\\Source\\Repos\\MEDVBiServ\\MEDVBiServ\\Databases\\DE-Deutsch\\elberfelder_1905.sqlite",
+    "BibleFr": "Data Source=C:\\Users\\KUDO27640-Admin\\Source\\Repos\\MEDVBiServ\\MEDVBiServ\\Databases\\FR-Français\\segond_1910.sqlite"
   }
 }
