feat(ui): CreatePage dynamisch anbinden und Auswahl-Logik korrigieren
- Sprache, Buch, Kapitel und Vers korrekt an MudSelect binden
- Fehlerhafte Value-/ValueChanged-Nutzung behoben
- Bücher dynamisch über API je nach Sprache laden (DE/FR)
- Kapitel und Verse abhängig von der Auswahl nachladen
- Hinzufügen einzelner Verse implementiert
- Duplikate bei Versauswahl verhindern
- Benutzerfeedback über Snackbar bei Fehlern ergänzt
- UI-Zustand und Re-Rendering stabilisiert

--- a/MEDVBiServ/MEDVBiServ.csproj
+++ b/MEDVBiServ/MEDVBiServ.csproj
@@ -32,4 +32,8 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MEDVBiServ.Contracts\MEDVBiServ.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
