feat(notifications): Globale Notification-Funktion mit Offline-Outbox & SQLite Backend implementiert
Frontend:
- Neue NotificationPage mit MudBlazor UI erstellt
- Nachrichten lesen & schreiben möglich
- Offline-Unterstützung via localStorage (Outbox-Prinzip)
- Automatische Synchronisation bei Wiederherstellung der Internetverbindung
- Online/Offline Statusanzeige integriert
- Periodischer Sync-Timer (5s)
- Optimistisches UI-Update bei Offline-Nachrichten

Backend (Clean Architecture):
- NotificationMessage Entity hinzugefügt
- DTOs (NotificationDto, CreateNotificationRequest) erstellt
- INotificationService + INotificationRepository definiert
- NotificationService implementiert (Validierung & Mapping)
- NotificationRepository mit EF Core (SQLite) implementiert
- NotificationsController mit GET/POST Endpunkten erstellt
- Paging-Unterstützung (take Parameter) integriert

Persistence:
- NotificationsDbContext mit SQLite konfiguriert
- Entity-Konfiguration (Index auf CreatedAt)
- DesignTimeDbContextFactory hinzugefügt (EF Migration Support)

Infrastructure:
- Dependency Injection Registrierung ergänzt
- ConnectionString in appsettings.json konfiguriert

Migration:
- Initiale Migration für Notifications erstellt
- SQLite Datenbank notifications.db eingebunden

Ergebnis:
- Nachrichten können offline verfasst werden
- Automatisches Senden bei Internetverbindung
- Globale Sichtbarkeit für alle App-Nutzer
- Clean Architecture konform implementiert

--- a/MEDVBiServ.API/appsettings.json
+++ b/MEDVBiServ.API/appsettings.json
@@ -10,6 +10,7 @@
   "ConnectionStrings": {
 
     "BibleDe": "Data Source=C:\\Users\\KUDO27640-Admin\\Source\\Repos\\MEDVBiServ\\MEDVBiServ\\Databases\\DE-Deutsch\\elberfelder_1905.sqlite",
-    "BibleFr": "Data Source=C:\\Users\\KUDO27640-Admin\\Source\\Repos\\MEDVBiServ\\MEDVBiServ\\Databases\\FR-Français\\segond_1910.sqlite"
+    "BibleFr": "Data Source=C:\\Users\\KUDO27640-Admin\\Source\\Repos\\MEDVBiServ\\MEDVBiServ\\Databases\\FR-Français\\segond_1910.sqlite",
+    "Notifications": "Data Source=C:\\Users\\KUDO27640-Admin\\source\\repos\\MEDVBiServ\\MEDVBiServ\\Databases\\Notifications\\notification.sqlite"
   }
 }
