--- a/MEDVBiServ.Infrastructure/MEDVBiServ.Infrastructure.csproj
+++ b/MEDVBiServ.Infrastructure/MEDVBiServ.Infrastructure.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DbFactories\" />
+    <Folder Include="Databases\Notifications\" />
     <Folder Include="Health\" />
   </ItemGroup>
 
