--- a/MEDVBiServ.API/MEDVBiServ.API.csproj
+++ b/MEDVBiServ.API/MEDVBiServ.API.csproj
@@ -17,6 +17,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MEDVBiServ.Application\MEDVBiServ.Application.csproj" />
+	<ProjectReference Include="..\MEDVBiServ.Infrastructure\MEDVBiServ.Infrastructure.csproj" />
+	 
   </ItemGroup>
 
 </Project>
