--- a/MEDVBiServ.Infrastructure/MEDVBiServ.Infrastructure.csproj
+++ b/MEDVBiServ.Infrastructure/MEDVBiServ.Infrastructure.csproj
@@ -13,8 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    
+	<ProjectReference Include="..\MEDVBiServ.Application\MEDVBiServ.Application.csproj" />
     <ProjectReference Include="..\MEDVBiServ.Domain\MEDVBiServ.Domain.csproj" />
+	 
   </ItemGroup>
 
   <ItemGroup>
