--- a/MEDVBiServ.Infrastructure/MEDVBiServ.Infrastructure.csproj
+++ b/MEDVBiServ.Infrastructure/MEDVBiServ.Infrastructure.csproj
@@ -9,6 +9,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.22" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
@@ -21,6 +24,7 @@
   <ItemGroup>
     <Folder Include="Databases\Notifications\" />
     <Folder Include="Health\" />
+    <Folder Include="Persistence\Migrations\" />
   </ItemGroup>
 
 </Project>
