--- a/MEDVBiServ/MEDVBiServ.csproj
+++ b/MEDVBiServ/MEDVBiServ.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Databases\Notifications\**" />
+    <Content Remove="Databases\Notifications\**" />
+    <EmbeddedResource Remove="Databases\Notifications\**" />
+    <None Remove="Databases\Notifications\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.18" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.9" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
@@ -30,10 +37,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MEDVBiServ.Contracts\MEDVBiServ.Contracts.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Databases\Notifications\" />
+	
   </ItemGroup>
 
 </Project>
